--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -2,7 +2,7 @@
 <div id="logo">
   <a href="{{- '/' | absolute_url -}}" id="home-link">
     <span class="image avatar48"><img src="{{- site.avatar | relative_url -}}" alt="{{- site.author | default: 'unknown author' | prepend: 'Avatar of ' -}}" /></span>
-    <h1 id="title">{{- site.title -}}</h1>
-    <p>{{- site.subtitle -}}</p>
+    <h1 id="title">No BS Training</h1>
+    <p>None of the BS, more of what works.</p>
   </a>
 </div>
