--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -2,7 +2,7 @@
 <div id="logo">
   <a href="{{- '/' | absolute_url -}}" id="home-link">
     <span class="image avatar48"><img src="assets/images/IMG_2703.jpg" alt="{{- site.author | default: 'unknown author' | prepend: 'Avatar of ' -}}" /></span>
-    <h1 id="title">No BS Fit Pro</h1>
+    <h1 id="title">Neil Austin, Certified No BS Fit Pro</h1>
     <p>Cut through the BS.</p>
   </a>
 </div>
