--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,8 @@ layout: default
 	<article class="shade-two">
 	  <div class="container">
 			<header>
-
+				<h2>{{- page.title -}}</h2>
+ 				{%- if page.subtitle -%}<p>{{- page.subtitle -}}</p>{%- endif -%}
 			</header>
 	    {{- content -}}
 	  </div>
