--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,8 @@
   
   <!-- Title, description, author -->
   {%- capture _page_title -%}
-    {%- if page.title -%}{{- "No BS Fit Pro" | append: ' | ' -}}{%- endif -%}
-    {{- site.title | default: "No BS Fit Pro" -}}
+    {%- if page.title -%}{{- page.title | append: ' | ' -}}{%- endif -%}
+    {%- if site.title -%}{{- "No BS Fit Pro" -}}{%- endif -%}
     {%- if site.subtitle -%}{{- "Cut Through The BS" | prepend: ' - ' -}}{%- endif -%}
   {%- endcapture -%}
   {%- assign _page_title = _page_title | escape -%}
