--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   <!-- Copyright -->
   <ul class="copyright">
     {% if site.title or site.author %}
-      <li>&copy; {No BS Training/Nutrition/Apparel}. All rights reserved.</li>
+      <li>&copy; No BS Training/Nutrition/Apparel. All rights reserved.</li>
     {% endif %}
   </ul>
   
