--- a/_includes/social_icons.html
+++ b/_includes/social_icons.html
@@ -10,7 +10,7 @@
   <li><a href="{{- site.googleplus_url -}}" class="icon-b fa-google-plus-g"><span class="label">Google Plus</span></a></li>
   {%- endif -%}
   {%- if site.instagram_url -%}
-  <li><a href="http://instagram.com/bigfreakinneil" class="icon-b fa-instagram"><span class="label">Instagram</span></a></li>
+  <li><a href="instagram.com/bigfreakinneil" class="icon-b fa-instagram"><span class="label">Instagram</span></a></li>
   {%- endif -%}
   {%- if site.linkedin_url -%}
   <li><a href="{{- site.linkedin_url -}}" class="icon-b fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
