--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-{%- include header.html scrolly_nav=_posts -%}
+{%- include header.html -%}
 <!-- Main -->
 <div id="main">
 	<!-- Post -->
