--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,7 +1,7 @@
 <!-- Logo -->
 <div id="logo">
   <a href="{{- '/' | absolute_url -}}" id="home-link">
-    <span class="image avatar48"><img src="assets/images/logo without text 2.png" alt="{{- site.author | default: 'No BS Fit Pro' | prepend: 'Avatar of ' -}}" /></span>
+    <span class="image avatar48"><img src="assets/images/logo without text 2.png"/></span>
     <h1 id="title">No BS Fit Pro</h1>
     <p>Cut through the BS.</p>
   </a>
